--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         </activity>
         <activity
             android:name=".ApplicationActivity"
-            android:label="@string/title_activity_application" >
+            android:label="@string/title_activity_application"
+            android:screenOrientation="landscape">
 
 
         </activity>
